# klausberger

./: .gitignore  meson.build  meson_options.txt  um.proto
include/: user.h
include/server/: manager.h
openssl/: client.crt  client.key  server.crt  server.key
src/: client.cpp  main.cpp  server.cpp  um.proto  user.cpp
src/client/: main.cpp
src/server/: main.cpp  manager.cpp
